# PathTracer

./: .gitignore  CMakeLists.txt  README.md  algebra.h  camera.h  composite.h  hitable.h  hitable_list.h  image.h  light.h  main.cpp  material.h  plane.h  ray.h  rectangle.h  sphere.h  texture.h  transformations.h  triangle.h
ImagenesGuays/: phong_500_ppp.ppm
